--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Webpage Design</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -22,11 +22,6 @@
                 </ul>
             </div>
 
-            <div class="search">
-                <input class="srch" type="search" name="" placeholder="Type To text">
-                <a href="#"> <button class="btn">Search</button></a>
-            </div>
-
         </div> 
         <div class="content">
             <h1>Web Design & <br><span>Development</span> <br>Course</h1>
@@ -39,14 +34,14 @@
                     <h2>Login Here</h2>
                     <input type="email" name="email" placeholder="Enter Email Here">
                     <input type="password" name="" placeholder="Enter Password Here">
-                    <button class="btnn"><a href="#">Login</a></button>
+                    <button class="btnn" id="logInBtn"><a href="#">Login</a></button>
 
-                    <p class="link">Don't have an account<br>
-                    <a href="#">Sign up </a> here</a></p>
-                    <p class="liw">Coding is Fun!!</p>
+                    <p class="link">Don't have an account<br></p>
+                    <button class="btnn" id="signUpbtn"><a href="#">Sign Up</a></button>
+                
 
                 </div>
-                    </div>
+                </div>
                 </div>
         </div>
     </div>
